--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1,29 +1,43 @@
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
+
 *{
   box-sizing: border-box;
   padding: 0;
+  font-family: "Ubuntu", sans-serif;
 }
 
 body{
   background-color: #325438;
 }
 
+/*Estilos del menu*/
 .menu {
+    margin-top: 50px;
     text-align: center;
+    margin-bottom: 50px;
   }
   
   .menu ul {
     list-style: none;
     padding: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
   
   .menu li {
     display: inline;
-    margin-right: 20px; /* Ajusta el espacio entre cada página según sea necesario */
+    margin-right: 100px; /* Ajusta el espacio entre cada página según sea necesario */
   }
   
   .menu a {
     color: #8FB996;
     text-decoration: none;
-    font-size: 16px; /* Ajusta el tamaño de la fuente según sea necesario */
+    font-size: 20px; /* Ajusta el tamaño de la fuente según sea necesario */
+    font-weight: 700;
   }
   
+  .logo {
+    height: 60px;
+    width: 60px;
+  }
