Estilos implementados en Inicio

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -14,7 +14,7 @@ body{
 .menu {
     margin-top: 50px;
     text-align: center;
-    margin-bottom: 50px;
+    margin-bottom: 20px;
   }
   
   .menu ul {
@@ -40,4 +40,33 @@ body{
   .logo {
     height: 60px;
     width: 60px;
+  }
+
+  /*Estilos página home*/
+
+  .homeContainer{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .homeTitle{
+    color: #A1CCA5;
+    font-weight: 700;
+    font-size: 40px;
+    height: 170px;
+  }
+
+  .hLogo{
+    height: 180px;
+    width: 180px;
+  }
+
+  .homeText{
+    width: 35%;
+    font-weight: 400;
+    font-size: 20px;
+    text-align: center;
+    color: #FFFFFF;
   }
