--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -72,3 +72,61 @@ body{
   }
 
   /*Estilos de la página de Actividades*/
+
+  .actContainer{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .actTitle{
+    width: 50%;
+    display: flex;
+    justify-content: center;
+    color: #8FB996;
+    margin-bottom: 50px;
+    font-weight: 700;
+    font-size: 26px;
+  }
+
+  .actList{
+    margin-bottom: 15px;
+    width: 38%;
+    padding: 15px;
+  }
+
+  .actividad{
+    display: flex;
+  }
+
+  .actImg{
+    margin-top: 14px;
+    margin-right: 25px;
+  }
+  
+  .imgActividad{
+    height: 100px;
+    width: 100px;
+  }
+
+  .actDescription{
+    padding: 0;
+    box-sizing: border-box;
+  }
+
+  .actDescription h2{
+    color: #FFFFFF;
+    font-size: 15px;
+  }
+
+  .actDescription p{
+    color: #FFFFFF;
+    font-size: 15px;
+  }
+
+  .actDescription ul{
+    color: #FFFFFF;
+    margin-left: 30px;
+    font-size: 15px;
+  }
