--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1,132 +1,178 @@
-@import url('https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap");
 
-*{
+* {
   box-sizing: border-box;
   padding: 0;
   font-family: "Ubuntu", sans-serif;
 }
 
-body{
+body {
   background-color: #325438;
 }
 
 /*Estilos del menu*/
 .menu {
-    margin-top: 50px;
-    text-align: center;
-    margin-bottom: 20px;
-  }
-  
-  .menu ul {
-    list-style: none;
-    padding: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  
-  .menu li {
-    display: inline;
-    margin-right: 100px; /* Ajusta el espacio entre cada página según sea necesario */
-  }
-  
-  .menu a {
-    color: #8FB996;
-    text-decoration: none;
-    font-size: 20px; /* Ajusta el tamaño de la fuente según sea necesario */
-    font-weight: 700;
-  }
-  
-  .logo {
-    height: 60px;
-    width: 60px;
-  }
+  margin-top: 50px;
+  text-align: center;
+  margin-bottom: 20px;
+}
 
-  /*Estilos página home*/
+.menu ul {
+  list-style: none;
+  padding: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 
-  .homeContainer{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-  }
+.menu li {
+  display: inline;
+  margin-right: 100px; /* Ajusta el espacio entre cada página según sea necesario */
+}
 
-  .homeTitle{
-    color: #A1CCA5;
-    font-weight: 700;
-    font-size: 40px;
-    height: 170px;
-  }
+.menu a {
+  color: #8fb996;
+  text-decoration: none;
+  font-size: 20px; /* Ajusta el tamaño de la fuente según sea necesario */
+  font-weight: 700;
+}
 
-  .hLogo{
-    height: 180px;
-    width: 180px;
-  }
+.logo {
+  height: 60px;
+  width: 60px;
+}
 
-  .homeText{
-    width: 35%;
-    font-weight: 400;
-    font-size: 20px;
-    text-align: center;
-    color: #FFFFFF;
-  }
+/*Estilos página home*/
 
-  /*Estilos de la página de Actividades*/
+.homeContainer {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
 
-  .actContainer{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-  }
+.homeTitle {
+  color: #a1cca5;
+  font-weight: 700;
+  font-size: 40px;
+  height: 170px;
+}
 
-  .actTitle{
-    width: 50%;
-    display: flex;
-    justify-content: center;
-    color: #8FB996;
-    margin-bottom: 50px;
-    font-weight: 700;
-    font-size: 26px;
-  }
+.hLogo {
+  height: 180px;
+  width: 180px;
+}
 
-  .actList{
-    margin-bottom: 15px;
-    width: 38%;
-    padding: 15px;
-  }
+.homeText {
+  width: 35%;
+  font-weight: 400;
+  font-size: 20px;
+  text-align: center;
+  color: #ffffff;
+}
 
-  .actividad{
-    display: flex;
-  }
+/*Estilos de la página de Actividades*/
 
-  .actImg{
-    margin-top: 14px;
-    margin-right: 25px;
-  }
-  
-  .imgActividad{
-    height: 100px;
-    width: 100px;
-  }
+.actContainer {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
 
-  .actDescription{
-    padding: 0;
-    box-sizing: border-box;
-  }
+.actTitle {
+  width: 50%;
+  display: flex;
+  justify-content: center;
+  color: #8fb996;
+  margin-bottom: 50px;
+  font-weight: 700;
+  font-size: 26px;
+}
 
-  .actDescription h2{
-    color: #FFFFFF;
-    font-size: 15px;
-  }
+.actList {
+  margin-bottom: 15px;
+  width: 38%;
+  padding: 15px;
+}
 
-  .actDescription p{
-    color: #FFFFFF;
-    font-size: 15px;
-  }
+.actividad {
+  display: flex;
+}
 
-  .actDescription ul{
-    color: #FFFFFF;
-    margin-left: 30px;
-    font-size: 15px;
-  }
+.actImg {
+  margin-top: 14px;
+  margin-right: 25px;
+}
+
+.imgActividad {
+  height: 100px;
+  width: 100px;
+}
+
+.actDescription {
+  padding: 0;
+  box-sizing: border-box;
+}
+
+.actDescription h2 {
+  color: #ffffff;
+  font-size: 15px;
+}
+
+.actDescription p {
+  color: #ffffff;
+  font-size: 15px;
+}
+
+.actDescription ul {
+  color: #ffffff;
+  margin-left: 30px;
+  font-size: 15px;
+}
+
+/*Estilos de la página de Preguntas*/
+
+.prContainer{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.prTitle{
+  width: 50%;
+  display: flex;
+  justify-content: center;
+  color: #8fb996;
+  margin-bottom: 50px;
+  font-weight: 700;
+  font-size: 26px;
+}
+
+.preguntasContainer{
+  width: 50%;
+}
+
+.prPregunta{
+  width: 100%;
+  margin-bottom: 20px;
+  border: #a1cca5 3px solid;
+}
+
+.pregunta{
+  border-bottom: #a1cca5 3px solid;
+  display: flex;
+  justify-content: center;
+  font-size: 18px;
+  font-weight: 700;
+  background-color: #a1cca5;
+  color: #325438;
+}
+
+.respuesta{
+  padding: 10px;
+  font-size: 16px;
+  font-weight: 400;
+  color: #8fb996;
+}
